Tls-Ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
  name: p002-argocd-server
  namespace: platform
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-argocd.projectkube.club
    http:
      paths:
      - backend:
          service:
            name: p002-argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - k8s-argocd.projectkube.club
    secretName: argocd-tls-certificate
