Tls-Ingress/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system 
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    # controls whether the ingress is modified ‘in-place’,
    # or a new one is created specifically for the HTTP01 challenge.
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - "*.projectkube.club" 
    secretName: projectkube-tls-key 
  rules:
  - host: k8s-kiali.projectkube.club
    http:
      paths:
      - backend:
          service:
            name: kiali 
            port:
              number: 20001 
        path: /
        pathType: ImplementationSpecific
