Tls-Ingress/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    # controls whether the ingress is modified ‘in-place’,
    # or a new one is created specifically for the HTTP01 challenge.
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - k8s-prometheus.projectkube.club 
    secretName: prometheus-tls
  rules:
  - host: k8s-prometheus.projectkube.club
    http:
      paths:
      - backend:
          service:
            name: m001-kube-prometheus-stack-prometheus 
            port:
              number: 9090 
        path: /
        pathType: ImplementationSpecific
